--- a/gb/17/1/9/n8685835.md
+++ b/gb/17/1/9/n8685835.md
@@ -1,20 +1,20 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/upgpqd328/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/upgpqd328/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/upgpqd328/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/upgpqd328/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/upgpqd328/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/upgpqd328/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/upgpqd328/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/upgpqd328/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/upgpqd328/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/upgpqd328/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/upgpqd328/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/upgpqd328/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/upgpqd328/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/upgpqd328/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/upgpqd328/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/upgpqd328/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/upgpqd328/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/upgpqd328/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/upgpqd328/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/upgpqd328/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/upgpqd328/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/upgpqd328/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/upgpqd328/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>监控民众 公安部“行为轨迹识别”课题遭曝光</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/12/f258f47b3d77ac2c3b447ced06a5eef5-320x200.jpg" />
+
 <h6></h6>
 <hr>
-	<p>【大纪元2017年01月10日讯】（大纪元记者杨一帆综合报导）近日，中共公安部的一个重点研究课题在网上被曝光，是有关重点监控人员及其<ahref="https://github.com/upgpqd328/djy/blob/master/gb/tag/%E6%97%B6%E7%A9%BA%E8%A1%8C%E4%B8%BA%E8%BD%A8%E8%BF%B9.md#1">时空行为轨迹</a>识别和预测的研究。中共实施的<ahref="https://github.com/upgpqd328/djy/blob/master/gb/tag/%E5%85%A8%E6%B0%91%E7%9B%91%E6%8E%A7.md#1">全民监控</a>再为外界关注。</p>
+	<p>【大纪元2017年01月10日讯】（大纪元记者杨一帆综合报导）近日，中共公安部的一个重点研究课题在网上被曝光，是有关重点监控人员及其<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%97%B6%E7%A9%BA%E8%A1%8C%E4%B8%BA%E8%BD%A8%E8%BF%B9.md#1">时空行为轨迹</a>识别和预测的研究。中共实施的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%85%A8%E6%B0%91%E7%9B%91%E6%8E%A7.md#1">全民监控</a>再为外界关注。</p>
 <p>1月8日，中共公安部的这个重点实验室项目的介绍文章出现在一个“位置服务”相关技术研究的专业微信公号“LBS”上。</p>
-<p>文章称，一份“关于公布基于大数据架构的公安信息化应用公安部重点实验室2016年度开放课题的通知”的文件显示，课题的第2项是《重点人员及其<ahref="https://github.com/upgpqd328/djy/blob/master/gb/tag/%E6%97%B6%E7%A9%BA%E8%A1%8C%E4%B8%BA%E8%BD%A8%E8%BF%B9.md#1">时空行为轨迹</a>特征识别和预测研究》。</p>
+<p>文章称，一份“关于公布基于大数据架构的公安信息化应用公安部重点实验室2016年度开放课题的通知”的文件显示，课题的第2项是《重点人员及其<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%97%B6%E7%A9%BA%E8%A1%8C%E4%B8%BA%E8%BD%A8%E8%BF%B9.md#1">时空行为轨迹</a>特征识别和预测研究》。</p>
 <p>该研究概述显示，该研究是基于公安需要准确、及时预测重点监控人员的可能活动， 利用“轨迹数据、互联网数据”，以及采用“时空轨迹识别和预测分析技术”，对公安重点监控的人员的活动特征进行分析识别，并能进行预测。</p>
 <p>文章称，在接听电话期间，当手机连接上信号塔时，移动公司就会储存用户的位置记录。利用这些数据，研究人员便能知道用户喜欢去什么地方，以及去的时间，从而能预测人的移动和行为模式。</p>
 <p>文章还引用了美国东北大学的一个研究，该大学复杂网络研究中心主任鲍劳巴希教授说，通过对数据的分析发现，从一个较长的时期来看，大多数人的移动行为都有一定规律，可预测。基于先期的数据分析，甚至可预测某个人下一个小时大致的目的地。</p>
 <p>研究人员发现，无论人们的旅行距离长短，93%的人的移动规律都可预测，并且绝大多数的人最经常的活动范围都离居住地不远。</p>
 <p>在早期的研究中，鲍劳巴希和其研究团队通过对10万匿名手机用户实时移动轨迹的研究发现，无论时间长短和距离远近，大多数人都会遵循一个简单的流动模式：在移动时，人们有回到他们去过的地方的强烈倾向。</p>
 <p>鲍劳巴希的研究成果被中共公安利用来监控民众。时事评论员剑平曾发表评论分析，美国政府和中共政府对公民进行监控的目的、内容、程序和后果都有本质上的区别。美国的监控目的是为了维护国家安全，其权力受到法治约束；中共的监控是为了维护其极权统治，其权力不受法治约束。</p>
-<p><strong style="font-size: 16px; line-height: 1.5;">中共实施<ahref="https://github.com/upgpqd328/djy/blob/master/gb/tag/%E5%85%A8%E6%B0%91%E7%9B%91%E6%8E%A7.md#1">全民监控</a> ?“任何人都可能成为受害者”</strong></p>
+<p><strong style="font-size: 16px; line-height: 1.5;">中共实施<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%85%A8%E6%B0%91%E7%9B%91%E6%8E%A7.md#1">全民监控</a> ?“任何人都可能成为受害者”</strong></p>
 <p>去年12月25日，福州警方对外公布第三批100名违反交通规则的行人和电动车名单，其中包括违规者的姓名、单位或住址，及违规地点等。其在全国首次利用了“人脸识别”技术。</p>
 <p>时事评论员伦国智表示，福州交警都能随便使用“人脸识别”的技术，说明中共监控、侵犯公民的隐私已经到了非常严重的地步。</p>
 <p>在大陆，监控无处不在。2010年中共官媒披露，仅北京一地的公共图像监控摄像头数量已达40余万个，覆盖全市的重点公共场所、主要交通道路和100%重点要害单位，超过70%的居民社区装有技防设施，总规模70多亿元人民币。</p>
@@ -29,42 +29,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/16/6/16/n8006014.md#1">陆大学成监狱？闭路监控覆盖整个校园</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/16/11/17/n8501334.md#1">中共监控产品销全球 引发安全担忧</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/16/11/28/n8535568.md#1">澳研讨会 原人民网员工揭中共舆情监控</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/16/12/1/n8546689.md#1">港媒系列文章批公安监控 江泽民被点名</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/6/16/n8006014.md#1">陆大学成监狱？闭路监控覆盖整个校园</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/11/17/n8501334.md#1">中共监控产品销全球 引发安全担忧</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/11/28/n8535568.md#1">澳研讨会 原人民网员工揭中共舆情监控</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/12/1/n8546689.md#1">港媒系列文章批公安监控 江泽民被点名</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/6/n9809482.md#1" target="_blank">吐斯廉博物馆告诉世界：柬埔寨发生过什么</a></li><li><a href="https://github.com/upgpqd328/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/11/n10473939.md#1" target="_blank">受化学毒剂侵害 越战老兵绝望中见证奇迹</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/20/n10234497.md#1" target="_blank">林辉：财大气粗的共产国际背后是血腥掠夺</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/24/n10998917.md#1" target="_blank">影片：与全世界背道而行 中共为何打击善良</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/20/12/30/n12653736.md#1">【命理】应享福或应受苦 命中有定数</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/20/10/3/n12449907.md#1">《圣经》与《推背图》预言的应验与变换12</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/5/n12667124.md#1">大疫将行 三指中共</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/13/n12684593.md#1">美国CIA解密大量UFO文件 网上可下载</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/11/n12680516.md#1">犹太拉比：科技巨头审查言论是反神的战争</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/12/n12684087.md#1">【时事纵横】马云关黑牢？美官员频会台外交官</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/11/n12681395.md#1">【重播】庆450英里边境墙 川普德州讲话</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/12/n12684132.md#1">【秦鹏直播】川普美墨边境演讲 透露何信息？</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/11/n12679966.md#1">【翻墙必看】传马云恐被抓关押在黑屋</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/11/n12681413.md#1">金正恩胞妹被意外踢出朝鲜政治局</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/11/n12681139.md#1">【新闻大家谈】比川普推特被封更重要的事</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/12/n12681992.md#1">晒与张钧甯等艺人合照 范冰冰：还是闺密靠谱</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/10/n12679436.md#1">张檬晒素颜证件照 告诫后来人不要整容</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/10/n12679612.md#1">女儿想要个妹妹 张梓琳反问“是弟弟咋办”</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/13/n12684292.md#1">杨颖受攻击 黄晓明护妻：冲我来 评论永不关闭</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/11/n12681730.md#1">粉丝好奇如何拍逼真断腿戏 刘德华幽默回应</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/11/n12681545.md#1">彩色口罩含致癌物？医师：3种颜色较安全</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/12/n12682337.md#1">诺查丹玛斯预言成真？ 小行星13日接近地球</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/13/n12684593.md#1">美国CIA解密大量UFO文件 网上可下载</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/11/n12680516.md#1">犹太拉比：科技巨头审查言论是反神的战争</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/12/n12682606.md#1">奇特画面：男子在游泳池内 头部与身体分离</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/upgpqd328/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/upgpqd328/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/1/9/n8685835.htm">监控民众 公安部“行为轨迹识别”课题遭曝光</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/1/9/n8685835.htm">监控民众 公安部“行为轨迹识别”课题遭曝光</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/upgpqd328/djy/blob/master/gb/17/1/9/n8685835.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/upgpqd328/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/upgpqd328/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/upgpqd328/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/17/1/9/n8685835.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
